Fixed toolbar being covered by other elements

--- a/src/app/pages/cards/pages/cards/cards.component.scss
+++ b/src/app/pages/cards/pages/cards/cards.component.scss
@@ -113,5 +113,5 @@
 }
 
 .background {
-  z-index: -1;
+  z-index: 0;
 }
